--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="/test/testBorder.html" target="main">TestBorder</a>
-            <a href="/test/TestCSSPosition.htm" target="main">TestCSSPosition</a>
-            <a href="/test/TestCssPosition2.htm" target="main">TestCssPosition2</a>
-            <a href="/test/TestDisplay.html" target="main">TestDisplay</a>
-            <a href="/test/TestDrop1.htm" target="main">TestDrop1</a>
-            <a href="/test/TestDrop2.htm" target="main">TestDrop2</a>
-            <a href="/test/testframeset.html" target="main"> Testframeset</a>
-            <a href="/test/Testiframe.html" target="main">Testiframe</a>
-            <a href="/test/testlayout.html" target="main">Testlayout</a>
-            <a href="/test/testLinkPage.html" target="main">TestLinkPage</a>
-            <a href="/test/TestLinkPage2.html" target="main">TestLinkPage2</a>
-            <a href="/test/TestLists.html" target="main">TestLists</a>
-            <a href="/test/Testliststyle.html" target="main">Testliststyle</a>
-            <a href="/test/TestTable.html" target="main">TestTable</a>
-            <a href="/test/TestTable2.html" target="main">TestTable2</a>
+            <a href="test/testBorder.html" target="main">TestBorder</a>
+            <a href="test/TestCSSPosition.htm" target="main">TestCSSPosition</a>
+            <a href="test/TestCssPosition2.htm" target="main">TestCssPosition2</a>
+            <a href="test/TestDisplay.html" target="main">TestDisplay</a>
+            <a href="test/TestDrop1.htm" target="main">TestDrop1</a>
+            <a href="test/TestDrop2.htm" target="main">TestDrop2</a>
+            <a href="test/testframeset.html" target="main"> Testframeset</a>
+            <a href="test/Testiframe.html" target="main">Testiframe</a>
+            <a href="test/testlayout.html" target="main">Testlayout</a>
+            <a href="test/testLinkPage.html" target="main">TestLinkPage</a>
+            <a href="test/TestLinkPage2.html" target="main">TestLinkPage2</a>
+            <a href="test/TestLists.html" target="main">TestLists</a>
+            <a href="test/Testliststyle.html" target="main">Testliststyle</a>
+            <a href="test/TestTable.html" target="main">TestTable</a>
+            <a href="test/TestTable2.html" target="main">TestTable2</a>
           </div>
         </div> 
       </div>
