--- a/homepage.html
+++ b/homepage.html
@@ -8,7 +8,7 @@
     <h1><center>  ~ HOMEPAGE ~ </center></h1>
     <style>
     body {
-        font-family: 'kanit',sans-serif
+        font-family: 'kanit',sans-serif;
     }
     a{
         text-decoration: unset;
