--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div class="navbar">
     <img src="/img/164-1645922_rem-rezero-bluehair-rem-re-zero-chibi.png" height="60px" align="right">
     
-        <a href="/mid.htm" target="main" >Home</a>
-        <a href="/homepage.html" target="main">Welcome</a>
+        <a href="mid.htm" target="main" >Home</a>
+        <a href="homepage.html" target="main">Welcome</a>
         <div class="dropdown">
           <button class="dropbtn">ClassWork 
             <i class="fa fa-caret-down"></i>
