--- a/test/TestTable.html
+++ b/test/TestTable.html
@@ -44,19 +44,19 @@
             <th> Rem </th>
         </tr>
         <tr> 
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
     </tr>
         <tr> 
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
     </tr>
         <tr> 
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
-            <td> <img src="/img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
+            <td> <img src="img/rem2.jpg" width="100%"> </td>
     </tr>
 
     </table></center>
