--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <div class="navbar">
-    <img src="img/ram2.jpg" height="60px" align="right">
+    <img src="./img/ram2.jpg" height="60px" align="right">
     
         <a href="mid.htm" target="main" >Home</a>
         <a href="homepage.html" target="main">Welcome</a>
