--- a/test/testframeset.html
+++ b/test/testframeset.html
@@ -5,7 +5,7 @@
                 
                 <frameset cols="20%,*" >
                         
-                        <frame src="../LinkPage.html" name="F2">
+                        <frame src="/work/LinkPage.html" name="F2">
                         <frame src="../homepage.html" name="F3">   
 
                 </frameset>
