--- a/test/TestCSSPosition.htm
+++ b/test/TestCSSPosition.htm
@@ -105,11 +105,11 @@
             </div>
 
         <div class="right">
-                <img src="/img/rem2.png" height="400">
+                <img src="../img/rem2.png" height="400">
             </div>
         <div class="center">
                 
-                <img src="/img/remram.png"height="400" width="580">
+                <img src="../img/remram.png"height="400" width="580">
                 
 
             </div>
@@ -117,7 +117,7 @@
     </div>
 
     <div class="bottom">
-        <center><img src="/img/icon-gif.png" height="100"></center>
+        <center><img src="../img/icon-gif.png" height="100"></center>
 
             </div>
       </div>
